--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -5,7 +5,7 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: rtiss_development
+      database: natty_development
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
@@ -128,7 +128,7 @@ development:
 test:
   clients:
     default:
-      database: rtiss_test
+      database: natty_test
       hosts:
         - localhost:27017
       options:
