--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "natty",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.2",
+    "@rails/actioncable": "^6.0.0-rc1",
+    "@rails/actiontext": "^6.0.0-rc1",
+    "@rails/activestorage": "^6.0.0-rc1",
+    "@rails/ujs": "^6.0.0-rc1",
+    "@rails/webpacker": "^4.0.7",
     "jquery": "^3.4.0",
     "particles.js": "^2.0.0",
     "semantic-ui": "^2.4.2",
+    "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
